# memedici

./: .eslintrc.json  .gitignore  DEV_GUIDE.md  NETLIFY_DEPLOYMENT.md  README.md  TODO.md  hardhat.config.js  netlify.toml  package-lock.json  package.json  postcss.config.js  render.yaml
app/: globals.css  layout.tsx
app/agents/: page.tsx
app/dashboard/: page.tsx
app/explore/: page.tsx
app/marketplace/: page.tsx
backend/: agent_config.py  agent_system_langgraph.py  agent_tools.py  blockchain_event_listener.py  custom_tool_manager.py  decentralized_dataset.py  feedback_oracle.py  feedback_oracle_integration.py  image_models.py  ipns_config.json  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  startup_agents.py  test_vlayer_integration.py  vlayer_verification.py
backend/dataset_cache/: entry_memedici_10226cdaa0e3.json  entry_memedici_96b52e53e86c.json  entry_memedici_d98b7a3b8aab.json
backend/examples/: jsonplaceholder_todos_spec.json  memedici_crypto_artist_agents.json  memedici_studios.json
backend/prompts/: system_prompts.py
backend/routes/: __init__.py  agents.py  artworks.py  chat.py  decentralized_storage.py  studios.py  tools.py  vlayer_routes.py
backend/static/: test.html
backend/tests/: test_ipns_integration.py
backend/utils/: setup_lighthouse_cli.sh
contracts/: AgentLaunchpad.sol  AgentToken.sol  FeedbackOracle.sol  FeedbackRewardToken.sol  README.md  hardhat.config.js  package-lock.json  package.json
front-end/: AGENT_ARTWORK_SYSTEM.md  DUMMY_AGENTS_REMOVAL.md  EXPLORE_TAB_UPDATE.md  FEEDBACK_SYSTEM.md  REAL_ARTWORKS_IMPLEMENTATION.md  WALLET_SETUP.md  deploy.sh  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
lib/: stubs.ts  types.ts
scripts/: debug-hedera.js
vlayer-content-authenticity-poc/: README.md  env.example  hardhat.config.js  package.json  test-vlayer-verification.js
(+211 files in other folders)
