[tool.poetry]
name = "memedici"
version = "0.1.0"
description = "Memedici - AI-powered creative platform for generating and managing artistic content"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = ">=2.7.4"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"
numpy = "1.24.3"
scikit-learn = "1.3.0"
pandas = "2.0.3"
python-multipart = "0.0.6"
langchain = ">=0.3.25"
langchain-openai = ">=0.3.18"
langchain-core = ">=0.3.63"
langgraph = ">=0.4.7"
langgraph-prebuilt = ">=0.2.2"
openai = ">=1.68.2"
sqlalchemy = "2.0.23"
pillow = ">=10.2.0"
requests = ">=2.31.0"
aiofiles = "23.2.1"
websockets = "12.0"
tiktoken = ">=0.7.0"
langsmith = ">=0.1.17"
alembic = "1.13.1"
asyncpg = "0.29.0"
langchain-anthropic = ">=0.2.0"
novita-client = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 